# vmd-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: RELEASE.md
examples/: README.md
scripts/: smoke_vmd.py
src/vmd_mcp/: __init__.py  __main__.py  server.py
tests/: test_integration.py  test_server.py
